# fastapi-demo-backend

./: Dockerfile  pyproject.toml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql
fastapi_demo/: main.py  models.py
